topics/customized-web-config/example/custom-web-console-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: custom-web-console-service
  namespace: mq
spec:
  ports:
    - name: qmgr
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app.kubernetes.io/component: integration
    app.kubernetes.io/instance: test-qmgr
    app.kubernetes.io/name: ibm-mq
  type: ClusterIP
  sessionAffinity: None
