topics/customized-web-config/example/custom-web-console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: custom-web-console-route
  namespace: mq
spec:
  to:
    kind: Service
    name: custom-web-console-service
  port:
    targetPort: 9443
  tls:
    termination: passthrough
  wildcardPolicy: None
